--- a/node-pipeline/Dockerfile
+++ b/node-pipeline/Dockerfile
@@ -4,9 +4,9 @@ ARG USER_ID=1001
 ARG GROUP_ID=1001
 ENV USER_NAME=default
 
-ENV HOME="/app"
-ENV PATH="/app/.local/bin:${PATH}"
-
+ENV HOME="/home/${USER_NAME}"
+ENV PATH="${HOME}/.local/bin:${PATH}"
+ENV APP="/app"
 
 USER root
 
@@ -24,13 +24,15 @@ WORKDIR ${HOME}
 RUN groupadd -g ${GROUP_ID} ${USER_NAME} && \
     useradd -u ${USER_ID} -r -g ${USER_NAME} -d ${HOME} -s /bin/bash ${USER_NAME} 
 
+
+WORKDIR ${HOME}
 #-----------------------------
 
 # Dev target
 FROM base AS dev
 COPY .devcontainer/devtools.sh /tmp/devtools.sh
 # Install extra dev tools as root, then run as default user
-RUN chmod +x devtools.sh && /tmp/devtools.sh
+RUN chmod +x /tmp/devtools.sh && /tmp/devtools.sh
 # Open dev port
 EXPOSE 8000
 USER ${USER_NAME}
@@ -42,14 +44,15 @@ USER ${USER_NAME}
 FROM base
 
 ## Move to app folder, copy project into container
-WORKDIR ${HOME}
+WORKDIR ${APP}
 ## REPLACE: replace this COPY statement with project specific files/folders
-COPY . .
+COPY . . 
 
-# Check home
-RUN chown -R ${USER_NAME}:${USER_NAME} ${HOME} && \
-    chmod -R 0750 ${HOME}
+# Check App permissions
+RUN chown -R ${USER_NAME}:${USER_NAME} ${APP} && \
+    chmod -R 0750 ${APP}
 
+# Run App as User
 USER ${USER_NAME}
 
 ## Install project requirements, build project
