--- a/golang-pipelne/.vscode/settings.json
+++ b/golang-pipelne/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     // "dev.containers.dockerPath": "podman",
     // "dev.containers.dockerComposePath": "podman-compose",
+    // "containers.containerClient": "com.microsoft.visualstudio.containers.podman",
     // "docker.commands.composeUp": [
     //     {
     //         "label": "Compose Up",
