--- a/maven-pipeline/.vscode/settings.json
+++ b/maven-pipeline/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     // "dev.containers.dockerComposePath": "podman-compose",
+    // "containers.containerClient": "com.microsoft.visualstudio.containers.podman",
     // "dev.containers.dockerPath": "podman",
     // "docker.commands.composeUp": [
     //     {
